// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpanDetailTable renders the component with data 1`] = `
<div>
  <div
    class="normal-wrapper"
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      class="euiDataGrid__focusWrap"
      data-focus-lock-disabled="disabled"
    >
      <div
        class="euiDataGrid euiDataGrid--fontSizeSmall euiDataGrid--bordersHorizontal euiDataGrid--headerUnderline euiDataGrid--footerOverline euiDataGrid--rowHoverHighlight euiDataGrid--paddingSmall euiDataGrid--stickyFooter"
        style="width: 100%; height: auto;"
      />
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`SpanDetailTable renders the empty component 1`] = `
<SpanDetailTable
  DSL={Object {}}
  dataSourceMDSId="testDataSource"
  hiddenColumns={
    Array [
      "traceId",
      "traceGroup",
    ]
  }
  http={
    Object {
      "post": [MockFunction] {
        "calls": Array [
          Array [
            "/api/observability/trace_analytics/query",
            Object {
              "body": "{\\"size\\":10,\\"from\\":0,\\"query\\":{\\"bool\\":{\\"must\\":[],\\"filter\\":[],\\"should\\":[],\\"must_not\\":[]}},\\"sort\\":[],\\"index\\":\\"otel-v1-apm-span-*\\"}",
              "query": Object {
                "dataSourceMDSId": "testDataSource",
              },
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": Promise {},
          },
        ],
      },
    }
  }
  mode="data_prepper"
  openFlyout={[Function]}
>
  <div>
    <EuiLoadingContent
      lines={4}
    >
      <span
        className="euiLoadingContent"
      >
        <span
          className="euiLoadingContent__singleLine"
          key="0"
        >
          <span
            className="euiLoadingContent__singleLineBackground"
          />
        </span>
        <span
          className="euiLoadingContent__singleLine"
          key="1"
        >
          <span
            className="euiLoadingContent__singleLineBackground"
          />
        </span>
        <span
          className="euiLoadingContent__singleLine"
          key="2"
        >
          <span
            className="euiLoadingContent__singleLineBackground"
          />
        </span>
        <span
          className="euiLoadingContent__singleLine"
          key="3"
        >
          <span
            className="euiLoadingContent__singleLineBackground"
          />
        </span>
      </span>
    </EuiLoadingContent>
  </div>
</SpanDetailTable>
`;

exports[`SpanDetailTable renders the jaeger component with data 1`] = `
<div>
  <div>
    <span
      class="euiLoadingContent"
    >
      <span
        class="euiLoadingContent__singleLine"
      >
        <span
          class="euiLoadingContent__singleLineBackground"
        />
      </span>
      <span
        class="euiLoadingContent__singleLine"
      >
        <span
          class="euiLoadingContent__singleLineBackground"
        />
      </span>
      <span
        class="euiLoadingContent__singleLine"
      >
        <span
          class="euiLoadingContent__singleLineBackground"
        />
      </span>
      <span
        class="euiLoadingContent__singleLine"
      >
        <span
          class="euiLoadingContent__singleLineBackground"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`SpanDetailTableHierarchy renders the component with data 1`] = `
<div>
  <div>
    <span
      class="euiLoadingContent"
    >
      <span
        class="euiLoadingContent__singleLine"
      >
        <span
          class="euiLoadingContent__singleLineBackground"
        />
      </span>
      <span
        class="euiLoadingContent__singleLine"
      >
        <span
          class="euiLoadingContent__singleLineBackground"
        />
      </span>
      <span
        class="euiLoadingContent__singleLine"
      >
        <span
          class="euiLoadingContent__singleLineBackground"
        />
      </span>
      <span
        class="euiLoadingContent__singleLine"
      >
        <span
          class="euiLoadingContent__singleLineBackground"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`SpanDetailTableHierarchy renders the empty component 1`] = `
<SpanDetailTableHierarchy
  DSL={Object {}}
  dataSourceMDSId="testDataSource"
  hiddenColumns={
    Array [
      "traceId",
      "traceGroup",
    ]
  }
  http={
    Object {
      "post": [MockFunction] {
        "calls": Array [
          Array [
            "/api/observability/trace_analytics/query",
            Object {
              "body": "{\\"size\\":10000,\\"from\\":0,\\"query\\":{\\"bool\\":{\\"must\\":[],\\"filter\\":[],\\"should\\":[],\\"must_not\\":[]}},\\"sort\\":[],\\"index\\":\\"otel-v1-apm-span-*\\"}",
              "query": Object {
                "dataSourceMDSId": "testDataSource",
              },
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": Promise {},
          },
        ],
      },
    }
  }
  mode="data_prepper"
  openFlyout={[Function]}
>
  <div>
    <EuiLoadingContent
      lines={4}
    >
      <span
        className="euiLoadingContent"
      >
        <span
          className="euiLoadingContent__singleLine"
          key="0"
        >
          <span
            className="euiLoadingContent__singleLineBackground"
          />
        </span>
        <span
          className="euiLoadingContent__singleLine"
          key="1"
        >
          <span
            className="euiLoadingContent__singleLineBackground"
          />
        </span>
        <span
          className="euiLoadingContent__singleLine"
          key="2"
        >
          <span
            className="euiLoadingContent__singleLineBackground"
          />
        </span>
        <span
          className="euiLoadingContent__singleLine"
          key="3"
        >
          <span
            className="euiLoadingContent__singleLineBackground"
          />
        </span>
      </span>
    </EuiLoadingContent>
  </div>
</SpanDetailTableHierarchy>
`;

exports[`SpanDetailTableHierarchy renders the jaeger component with data 1`] = `
<div>
  <div>
    <span
      class="euiLoadingContent"
    >
      <span
        class="euiLoadingContent__singleLine"
      >
        <span
          class="euiLoadingContent__singleLineBackground"
        />
      </span>
      <span
        class="euiLoadingContent__singleLine"
      >
        <span
          class="euiLoadingContent__singleLineBackground"
        />
      </span>
      <span
        class="euiLoadingContent__singleLine"
      >
        <span
          class="euiLoadingContent__singleLineBackground"
        />
      </span>
      <span
        class="euiLoadingContent__singleLine"
      >
        <span
          class="euiLoadingContent__singleLineBackground"
        />
      </span>
    </span>
  </div>
</div>
`;
